--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is FET version 5.23.2
+This is FET version 5.23.2 [![Build Status](https://travis-ci.org/karandit/fet.png?branch=master)](https://travis-ci.org/karandit/fet)
 
 
 Program description:
