Upgrade to FEt 5.23.3
- Updated to Qt 5.3.2.
- Added a fet.desktop file (by Alexey Loginov).
- Fixed some comments concerning the GNU GPL license (reported by Alexey
  Loginov).
- Added a "make install" option (suggested by Alexey Loginov and other
    users, done by Zsolt Udvari and Liviu Lalescu).
- Added an icon (suggested by Alexey Loginov and other users).
- Added an option at compilation time so that FET automatically detects
  the system locale (suggested by Alexey Loginov and other users).

--- a/THANKS
+++ b/THANKS
@@ -349,3 +349,11 @@ Mohamed Bahaj - example file.
 Thomas Klausner - pkgsrc packager.
 
 Jörg Sonnenberger - patch to fix a building problem for the new C++11.
+
+Boubker - suggestions.
+
+Alexey Loginov - suggestions.
+
+_indianajones - suggestion.
+
+russell - suggestion.
