--- a/ChangeLog
+++ b/ChangeLog
@@ -1715,3 +1715,10 @@ Versions 5.23.0 - 5.23.v
 	students set (suggested and implemented by Volker Dirr).
 - Version 5.23.2
 	- Fixed a building problem under C++11 (reported by pkgsrc packager Thomas Klausner, solved by Jörg Sonnenberger).
+- Version 5.23.3
+	- Updated to Qt 5.3.2.
+	- Added a fet.desktop file (by Alexey Loginov).
+	- Fixed some comments concerning the GNU GPL license (reported by Alexey Loginov).
+	- Added a "make install" option (suggested by Alexey Loginov and other users, done by Zsolt Udvari and Liviu Lalescu).
+	- Added an icon (suggested by Alexey Loginov and other users).
+	- Added an option at compilation time so that FET automatically detects the system locale (suggested by Alexey Loginov and other users).
