--- a/THANKS
+++ b/THANKS
@@ -357,3 +357,9 @@ Alexey Loginov - suggestions.
 _indianajones - suggestion.
 
 russell - suggestion.
+
+Nguyen Huu Tuyen - example files.
+
+fromturkey - suggestion.
+
+orange - Chinese Simplified translation.
