--- a/THANKS
+++ b/THANKS
@@ -371,3 +371,9 @@ Vanyo Georgiev - suggestion.
 bharatstank - suggestion.
 
 alxgudea - suggestion.
+
+andrealva - suggestion.
+
+dotosouza - suggestion.
+
+Bob Hairgrove - suggestions.
