--- a/THANKS
+++ b/THANKS
@@ -377,3 +377,9 @@ andrealva - suggestion.
 dotosouza - suggestion.
 
 Bob Hairgrove - suggestions.
+
+James - Chinese Traditional translation.
+
+Khalilullah Yosufi - suggestions.
+
+mercurialuser - suggestions.
