Upgrade to FET 5.27.2
- Fixed a compilation error under CentOS 6 (reported by azaer).

--- a/THANKS
+++ b/THANKS
@@ -383,3 +383,5 @@ James - Chinese Traditional translation.
 Khalilullah Yosufi - suggestions.
 
 mercurialuser - suggestions.
+
+azaer - bug report.
