--- a/ChangeLog
+++ b/ChangeLog
@@ -1788,3 +1788,5 @@ Versions 5.27.0 - 5.27.v
 	- Crash bug fix, when modifying a teacher after generating, and then viewing the timetable for that teacher without generating again.
 	Reported by Yush Yuen.
 	- Updated the German translation, by Bob Hairgrove.
+- Version 5.27.2
+	- Fixed a compilation error under CentOS 6 (reported by azaer).
