--- a/THANKS
+++ b/THANKS
@@ -385,3 +385,9 @@ Khalilullah Yosufi - suggestions.
 mercurialuser - suggestions.
 
 azaer - bug report.
+
+chintu - suggestion.
+
+khalafi - suggestion.
+
+jillali elghazoui - suggestion.
