--- a/THANKS
+++ b/THANKS
@@ -391,3 +391,9 @@ chintu - suggestion.
 khalafi - suggestion.
 
 jillali elghazoui - suggestion.
+
+Mohamed NAJARI - suggestions.
+
+youssouf - suggestion.
+
+Pascal Cohen - French translation.
